# pdf-ocr-ai

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_WIKI.md  OPENCODE-GUIDE.md  README.md  build-log.txt  config.yaml  package-lock.json  package.json  requirements.txt  version.example.json  version.json  version.json.template
.claude/: settings.local.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: http_service.rs  main.rs
docs/: 2026_NEW_TINY_MODELS.md  GIT_PUSH_GUIDE.md  GitHub-Actions-配置指南.md  INSTALL.md  LLM_SETUP.md  MODEL_COMPARISON.md  NON_LITIGATION_TEST_GUIDE.md  QWEN3_MODELS.md  TINY_MODELS_FOR_OLD_PC.md  accuracy-first-optimization.md  batch-optimization-plan.md  design-system.md  ocr_generic_design.md  path-layout.md  region-ocr-implementation.md  tauri-app-design.md  ui-prototype.html  企业信息查询API文档（unicloud）.md  企业查询接口api文档.md  发布新版本流程.md  软件开发需求.md
output/: 1-责催-穗公积金中心黄埔责字（2025）594号_ultra_result.json  1-责催-穗公积金中心黄埔责字（2025）594号_ultra_result.txt  1_ultra_result.json  1_ultra_result.txt  2_ultra_result.json  2_ultra_result.txt  3_ultra_result.json  3_ultra_result.txt  5月案件-被执行人信息_已填充.xlsx  7-责催-穗公积金中心越秀责字（2024）914-1号_ultra_result.json  7-责催-穗公积金中心越秀责字（2024）914-1号_ultra_result.txt  8-责催-穗公积金中心越秀责字（2025）856号_ultra_result.json  model_info_report.json  non-litigation-run-summary-batch2.json  non-litigation-run-summary.json  notice-preview.json  ocr-validation-report-batch2.html  ocr-validation-report.html  project-evaluation.json  ruling-result.json  广东省新闻工作者协会法律服务定点采购合同_ultra_result.json  广东省新闻工作者协会法律服务定点采购合同_ultra_result.txt  所函_ultra_result.json  所函_ultra_result.txt  授权书_ultra_result.json  授权书_ultra_result.txt  用户上传_测试合同_审查完成_扫描版_ultra_result.json  用户上传_测试合同_审查完成_扫描版_ultra_result.txt  申请书_ultra_result.json  申请书_ultra_result.txt  （2025）粤7101行审3352号_ultra_result.json  （2025）粤7101行审3352号_ultra_result.txt  （2025）粤7101行审3355号_ultra_result.json  （2025）粤7101行审3355号_ultra_result.txt
scripts/: benchmark_models.py  download_from_modelscope.py  download_gguf_models.py  download_model.py  download_models.py  fill_company_info_from_coze.py  run_enforcement_flow.py  run_non_litigation_flow.py  setup_poppler.py  test_smart_extraction.py
src/: config_loader.py  enforcement_export.py  enforcement_extractor.py  enforcement_product.py  local_llm.py  non_litigation_export.py  non_litigation_product.py  (+19 more)
(+249 files in other folders)
