[package]
name = "gjj-ocr-desktop"
version = "1.1.1"
description = "公积金 OCR 工具 - Tauri 桌面版"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "dialog-message", "fs-copy-file", "fs-remove-dir", "fs-read-file", "fs-exists", "process-relaunch", "fs-create-dir", "fs-rename-file", "fs-read-dir", "fs-write-file", "fs-remove-file", "path-all", "os-all", "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
