[package]
name = "gjj-ocr-desktop"
version = "1.2.1"
description = "公积金 OCR 工具 - Tauri 桌面版"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.19"
windows-sys = { version = "0.52", features = ["Win32_UI_HiDpi"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
